# mtg-proxy-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  sync_nodes.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: development.yml  production.yml  pull-request.yml  release-please.yml
alembic/: env.py
alembic/versions/: 5c8c0fdc6299_add_users_table.py  8777af9796e7_add_flag_to_nodes.py  973dc5c8ac37_add_nodes_and_proxies_tables.py  a1b2c3d4e5f6_add_agent_port_to_nodes.py  b2c3d4e5f6a7_add_proxy_settings_table.py  c3d4e5f6a7b8_add_faq.py  d4e5f6a7b8c9_add_referred_by_to_users.py  e5f6a7b8c9d0_add_web_auth_fields.py  f6a7b8c9d0e1_add_site_settings_table.py
api/: deps.py  email_service.py  jwt.py  main.py
api/routers/: admin.py  auth.py  health.py  proxies.py  pub_settings.py  users.py
bot/: callbacks.py  config.py  database.py  filters.py  main.py  web_server.py
bot/dao/: __init__.py  account_link_token.py  email_verification.py  faq.py  node.py  proxy.py  settings.py  site_setting.py  user.py
bot/handlers/: __init__.py  common.py  faq.py  link.py  proxy.py
bot/middleware/: __init__.py  ban.py  db.py  throttling.py
bot/models/: __init__.py  account_link_token.py  email_verification.py  faq.py  node.py  proxy.py  user.py  (+2 more)
docs/: admin_panel_api.md  email_preview.html  web_design.md
web/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+28 files in other folders)
