[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg-proxy-bot"
version = "0.1.0"
description = "Telegram bot for MTProto proxy management"
authors = [
    {name = "VAQYBIN"}
]
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
  "aiogram>=3.26.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis[asyncio]>=5.0",
  "httpx>=0.28",
  "pydantic-settings>=2.0",
  "qrcode[pil]>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "flake8>=7.0",
  "flake8-pyproject>=1.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
exclude = [".venv", ".git", "__pycache__", "alembic"]